@@ -1,8 +1,8 @@
 Package: oligo
-Version: 1.9.21
+Version: 1.9.24
 Title: Tools for low-level analysis of oligonucleotide arrays.
-Author: Benilton Carvalho <bcarvalh@jhsph.edu>, Rafael A. Irizarry and Ben Bolstad with contributions from Vince Carey, Robert Gentleman, Wolfgang Huber
-Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu>
+Author: Benilton Carvalho <carvalho@bclab.org>, Rafael A. Irizarry with contributions from Ben Bolstad, Vince Carey, Robert Gentleman, Wolfgang Huber
+Maintainer: Benilton Carvalho <carvalho@bclab.org>
 Depends: R (>= 2.10.0), oligoClasses (>= 1.7.12), preprocessCore (>= 1.7.4)
 Imports: splines, affxparser (>= 1.17.3), graphics, utils, stats, DBI (>= 0.2-4), Biobase (>= 2.5.5), methods, affyio (>= 1.13.3)
 LinkingTo: preprocessCore
